# ai-intel-harness

./: .gitignore  CLAUDE.md  DISCUSSION_LOG.md  GOVERNANCE.md  OPERATING_GUIDE.md  PROJECT_LOG.md  README.md  SALES_AI_AT_SCALE.md  SALES_AI_GOVERNANCE.md  SALES_PLAYBOOK_v0.4_archive.md  SCOPE.md  SOLUTION_MAP.md  frontier_vocabulary_arbitrage_7_levers_snapshot.md  pyproject.toml  sources.yaml
.github/workflows/: quarterly-synthesis.yml  weekly-digest.yml
collector/: __init__.py  config.py  enrich_excerpts.py  extract.py  run.py  storage.py
collector/fetchers/: __init__.py  rss.py  scrape.py
data/: health_latest.md
delivery/: __init__.py  assemble.py  notify.py
digests/: 2026-W19.md  2026-W20.md  2026-W21.md  2026-W22.md  2026-W23.md  2026-W24.md  2026-W25.md  2026-W26.md  2026-W27.md  2026-W28.md  2026-W29.md  2026-W30.md
digests/2026-W19/: foundation.md
digests/2026-W20/: foundation.md
digests/2026-W21/: foundation.md
digests/2026-W22/: foundation.md
digests/2026-W23/: foundation.md
digests/2026-W24/: foundation.md
digests/2026-W25/: foundation.md
digests/2026-W26/: foundation.md
digests/2026-W27/: foundation.md
digests/2026-W28/: foundation.md
digests/2026-W29/: foundation.md
digests/2026-W30/: foundation.md
monitor/: __init__.py  health.py  run.py  triggers.py
scripts/: sync-to-wiki.sh
synthesizer/: __init__.py  client.py  foundation.py  prompts.py  pulse.py  quarterly.py  run.py  run_foundation.py  run_pulse.py  run_quarterly.py  triage.py
view/: README.md  config_at_scale.js  config_governance.js  index.html
