[project]
name = "ai-intel-harness"
version = "0.1.0"
description = "Weekly AI intelligence pipeline — wide scan, cheap filter, selective deep read. Built as a harness engineering portfolio artifact."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Livia Hsieh" }]
license = { text = "MIT" }

dependencies = [
  "feedparser>=6.0.11",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pyyaml>=6.0.1",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
collect = "collector.run:main"
triage = "synthesizer.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["collector", "synthesizer"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
